--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,10 @@
     @apply bg-[color:var(--primary)]
 
 }
+.bg-secondary{
+    @apply bg-[color:var(--secondary)]
+
+}
 .sectionPadding{
     @apply py-40 lg:py-32 md:py-24
 }
@@ -56,4 +60,14 @@
 
 .ball {
     @apply w-28 h-28 rounded-full bg-red-400 
+}
+.pagination span {
+    @apply text-black px-4 py-2
+}
+
+.activePage {
+    @apply  bg-[color:var(--primary)] text-white shadow-xl
+}
+.page {
+    @apply px-4 py-2
 }
